# montray

./: .gitignore  README.md  build-system-deb.js  generate_icons.py  main.js  package.json
electron/: package-lock.json  preload.js
electron/src/: renderer.js
python/: build.py  main.py  montray.spec  requirements.txt
src/: index.html  renderer.js  styles.css  tauri-adapter.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
